# base_app

./: .dockerignore  .editorconfig  .env  .env-dist  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg
base_app/: asgi.py  celery.py  logging.py  settings.py  urls.py
docker/utils/adminer/plugins/: fill-login-form.php
scripts/: README.md  attach  check  cleanup  console  debug  install  manage  migrate  restart  restore_db  run_util  setup  setup_docker  start  stop  teardown  test  tools  update
scripts/utils/: dbadmin  dbdump  flower  pgadmin  pgdump
utils/: environment.py  test.py
